# clinical-asr-robustness

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: datasets.example.yaml  eval_tasks.example.yaml  gold_key_facts.example.jsonl  medical_candidate_lexicon.example.json  medical_candidate_lexicon.remote_programming_40.json
data/: README.md
docs/: asr_confidence_decisions.md  asr_confidence_nemo_code_notes.md  asr_confidence_schema.md  dataset_notes.md  primock57_asr_manifest.md  remote_programming_40_dataset_assessment.md  repair_schema.md  research_plan.md  t005_noisy_error_analysis.md  t026_nemo_smoke_test.md  t028_nemo_confidence_export.md  t029_asr_nbest_candidates.md  t030_t035_t036_review_workflow.md  t031_asr_quality_evaluation.md  t032_asr_output_min_loop.md  t037_nemo_asr_nbest_demo.md  t038_medical_entity_review.md  t039_candidate_coverage_improvement.md  t040_confirmed_downstream_evaluation.md  t041_case_summary_generation.md  t042_case_summary_quality_evaluation.md  t043_ctc_word_confidence.md  t045_case_summary_three_texts.md  t046_speaker_weight_ablation.md  t050_chinese_asr_flow_research.md  t051_t060_chinese_asr_integration.md  t058_t066_chinese_pilot5_robustness.md  t061_chinese_all40_engineering.md  t068_chinese_conversation_candidates_diarization.md  t070_sortformer_diarization_pilot.md  task_records.md  todo.md  week1_practice_report.tex  week2_practice_report.tex  wsl_environment.md
notebooks/: README.md
outputs/: README.md
scripts/: README.md  analyze_aci_bench_noisy_errors.py  apply_asr_review_feedback.py  (+40 more)
(+56 files in other folders)
