[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-asr-robustness"
version = "0.1.0"
description = "面向临床语音转写噪声的病例信息整理与鲁棒性评估"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jiwer>=3.0.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["third_party"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
